--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,6 +1,16 @@
 #Home {
   display: flex;
   flex-wrap: wrap;
+  width: 80%;
+  min-width: 280px;
+  max-width: 1296px;
+  margin: 0 auto;
   justify-content: center;
-  padding: 2rem;
+  padding: 2rem 1rem;
+}
+
+@media screen and (max-width: 840px){
+  #Home {
+    width: 100%;
+  }
 }
